syntax = "proto3";

option csharp_namespace = "PetKeeperMobileApp";

package announcement;

service AnnouncementService {
    rpc CreateAnnouncement (AnnouncementCreate) returns (AnnouncementMinimal);
    rpc GetAnnouncements (AnnouncementGet) returns (AnnouncementList);
    rpc UpdateAnnouncement (AnnouncementUpdate) returns (AnnouncementUpdate);
    rpc DeleteAnnouncement (AnnouncementMinimal) returns (AnnouncementMinimal);
}

message AnnouncementCreate {
    optional string id = 1;
    optional string author_id = 2;
    optional string keeper_id = 3;
    string animal_id = 4;
    uint32 keeper_profit = 5;
    bool is_negotiable = 6;
    optional string description = 7;
    uint64 start_term = 8;
    uint64 end_term = 9;
    optional uint64 created_date = 10;
    optional uint64 finished_date = 11;
    optional string status = 12;
    string address_id = 13;
}

message AnnouncementMinimal {
    string id = 1;
    string author_id = 2;
    optional string keeper_id = 3;
    optional string animal_id = 4;
    optional string address_id = 5;
}

message AnnouncementGet {
    optional string id = 1;
    optional string author_id = 2;
    optional string keeper_id = 3;
    optional string animal_id = 4;
    optional uint32 keeper_profit_less = 5;
    optional uint32 keeper_profit_more = 6;
    optional bool is_negotiable = 7;
    optional string description = 8;
    optional uint64 start_term_before = 9;
    optional uint64 end_term_before = 10;
    optional uint64 created_date_before = 11;
    optional uint64 finished_date_before = 12;
    optional uint64 start_term_after = 13;
    optional uint64 end_term_after = 14;
    optional uint64 created_date_after = 15;
    optional uint64 finished_date_after = 16;
    optional string status = 17;
    optional string address_id = 18;
}

message AnnouncementUpdate {
    string id = 1;
    optional string author_id = 2;
    optional string keeper_id = 3;
    optional string animal_id = 4;
    optional uint32 keeper_profit = 5;
    optional bool is_negotiable = 6;
    optional string description = 7;
    optional uint64 start_term = 8;
    optional uint64 end_term = 9;
    optional uint64 created_date = 10;
    optional uint64 finished_date = 11;
    optional string status = 12;
    optional string address_id = 13;
}

message AnnouncementList {
    repeated AnnouncementUpdate announcements = 1;
}